--- a/package.json
+++ b/package.json
@@ -9,19 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.10",
+    "axios": "^1.6.8",
+    "framer-motion": "^11.0.24",
+    "jsdom": "^24.0.0",
+    "next": "14.1.4",
+    "nodemailer": "^6.9.13",
+    "puppeteer": "^22.8.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "react-hook-form": "^7.51.4",
+    "resend": "^3.2.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/jsdom": "^21.1.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4"
+    "typescript": "^5"
   }
 }
